[package]
name = "ocular"
description = "A client library for Cosmos SDK chains with a focus on pleasant UX"
authors = ["Collin Brittain", "Phil Bal"]
version = "1.0.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PeggyJV/ocular"
documentation = "https://docs.rs/ocular/latest/ocular/"
keywords = ["cosmos", "client", "tx", "query"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
normal = ["assay"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assay = "0.1"
async-trait = "0.1.56"
eyre = "0.6.8"
cosmrs = { version = "0.9.0", features = ["grpc", "rpc"] }
serde = "1.0.133"
tonic = { version = "0.8", features = ["transport"] }
prost = "0.11"
hex = "0.4.3"
pkcs8 = { version = "0.9.0", features = ["encryption", "pem"] }
tendermint-rpc = { version = "0.23.9", optional = true, features = ["websocket-client"] }

[features]
default = ["tx", "crypto"]
query = []
tx = ["query"]
crypto = []
tendermint-rpc-ws = ["tendermint-rpc"]

[dev-dependencies]
cosmrs = { version = "0.9.0", features = ["dev"] }
k256 = { version = "0.11.4", features = ["pem"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
