[package]
name = "ocular"
description = "A client library Cosmos SDK chains with chain registry interaction"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PeggyJV/ocular"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assay = "0.1"
bech32 = "0.6"
bip32 = "0.3"
cosmos-sdk-proto = { version = "0.9", features = ["grpc"] }
cosmrs = "0.4"
dirs = "1.0"
futures = { version = "0.3", features = ["executor"] }
hex = "0.3"
keyring = "1.1"
k256 = { version = "0.10", features = ["pem"] }
http = "0.2"
octocrab = "0.15"
pkcs8 = "0.8"
rand = "0.8"
rand_core = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
signatory = "0.24"
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
tendermint-rpc = { version = "0.23", features = ["http-client"] }
thiserror = "1.0"
tiny-bip39 = "0.8"
tonic = { version = "0.6", features = ["transport"] }
url = "2.2"
