[package]
name = "ocular"
description = "A client library Cosmos SDK chains with chain registry interaction"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PeggyJV/ocular"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assay = "0.1"
bech32 = "0.6"
bip32 = "0.3"
cosmos-sdk-proto = { git = "https://github.com/cosmos/cosmos-rust", branch = "main", features = ["grpc"]}
cosmrs = {version = "0.5.1", features = ["dev"] }
dirs = "1.0.4"
futures = { version = "0.3.19", features = ["executor"] }
hex = "0.3.1"
keyring = "1.1.2"
k256 = { version = "0.10.2", features = ["pem"] }
http = "0.2"
octocrab = "0.15.3"
pkcs8 = "0.8"
rand = "0.8.4"
rand_core = "0.6.3"
reqwest = { version = "0.11.8", features = ["json"] }
serde = "1.0.133"
serde_json = "1.0.78"
signatory = "0.24"
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", branch = "master" }
tendermint-rpc = { version = "0.23", features = ["http-client"] }
thiserror = "1.0"
tiny-bip39 = "0.8"
tonic = { version = "0.6", features = ["transport"] }
url = "2.2.2"
tendermint-proto = "0.23.5"
tokio = "1.17.0"
prost-types = "0.9.0"
prost = "0.9.0"

