[package]
name = "ocular"
description = "A client library Cosmos SDK chains with chain registry interaction"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PeggyJV/ocular"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assay = "0.1"
bech32 = "0.6"
bip32 = "0.3"
# This explicit cosmos-sdk-proto import shouldn't be needed because cosmrs exposes it,
# but for some reason the cosmos module query_client rust modules aren't importable through
# cosmrs without this.
cosmos-sdk-proto = "0.11.0"
cosmrs = {version = "0.6.0", features = ["dev"] }
dirs = "1.0.4"
futures = { version = "0.3.19", features = ["executor"] }
hex = "0.3.1"
keyring = "1.1.2"
k256 = { version = "0.10.2", features = ["pem"] }
http = "0.2"
octocrab = "0.15.3"
pkcs8 = "0.8"
rand = "0.8.4"
rand_core = "0.6.3"
reqwest = { version = "0.11.8", features = ["json"] }
serde = "1.0.133"
serde_json = "1.0.78"
signatory = "0.24"
thiserror = "1.0"
tendermint-pre = { package = "tendermint", git = "https://github.com/informalsystems/tendermint-rs" }
tendermint-rpc = "0.23.6"
tiny-bip39 = "0.8"
tonic = { version = "0.6", features = ["transport"] }
url = "2.2.2"
tendermint-proto = "0.23.5"
tokio = "1.17.0"
prost-types = "0.9.0"
prost = "0.9.0"
toml = "0.5.8"
chrono = "0.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
