[package]
name = "ocular-cli"
description = "A CLI implementing the ocular client lib"
authors = ["Collin Brittain"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/PeggyJV/ocular"
readme = "README.md"

[dependencies]
abscissa_tokio = "0.6.0-rc.0"
clap = "3"
futures = { version = "0.3.19", features = ["executor"] }
ocular = { path = "../ocular" }
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
tokio = { version = "1.15.0", features = ["rt"] }
dirs = "4.0.0"
toml = "0.5.8"
serde_json = "1.0.78"

[dependencies.abscissa_core]
version = "0.6.0-rc.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-rc.0", features = ["testing"] }
once_cell = "1.2"

